# hft-3

./: .gitignore  README.md
bdm/: CMakeLists.txt  bdm-config.h.in  bdm_createdb_main.cpp  bdm_network_autogen_main.cpp  bdmdb.cpp  configure  dialogs.cpp  downloader.cpp  file_operations.cpp  generator.cpp  main.cpp
bdm/cmake/Modules/: FindSQLite3.cmake  Findnewt.cmake
bdm/include/: appconfig.hpp  bdmdb.hpp  dialogs.hpp  downloader.hpp  file_operations.hpp  generator.hpp
bitmex-bridge/: BitMex.php  HftConnector.php  Logger.php  bitmex-bridge.php
caans/: CMakeLists.txt  caans-config.h.in  configure  daemon_process.cpp  downloader.cpp  ipc_server.cpp  main.cpp  sms_messenger.cpp
caans/deploy/: caansd.conf.default  caansd.service
caans/include/: caans_client.hpp  custom_except.hpp  daemon_process.hpp  downloader.hpp  ipc_server.hpp  sms_messenger.hpp  synchronized_queue.hpp  thread_worker.hpp
dukascopy-bridge/pl.com.hlabber/: pom.xml
dukascopy-bridge/pl.com.hlabber/src/main/java/pl/com/hlabber/: Main.java  ProxyBridge.java
etc/: prepare-boost.sh
etc/deploy/: hft-cron  hft-watchdog.sh  hftwatchdog-run.sh
hft/: CMakeLists.txt  ai_predictor.cpp  ai_trainer_main.cpp  auto_deallocator.cpp  basic_artifical_inteligence.cpp  binomial_approximation.cpp  configure  csv_loader.cpp  daemon_process.cpp  decision_trigger.cpp  distrib_approx_main.cpp  expert_advisor.cpp  files_change_tracker.cpp  fx_account.cpp  fxemulator_main.cpp  hci.cpp  hci_tuner_main.cpp  hft-config.h.in  hft_bcalc_main.cpp  hft_dukascopy_optimizer_main.cpp  hft_req_proto.cpp  hft_server_main.cpp  hft_session.cpp  hft_utils.cpp  hftr.cpp  hftr_generator_main.cpp  hftr_mixer_main.cpp  inst_distribution_main.cpp  instrument_handler.cpp  main.cpp  marketplace_gateway_process.cpp  mdc.cpp  neural_network.cpp  neuron.cpp  overnight_swaps.cpp  pcp_driver_antychiron.cpp  pcp_driver_basic.cpp  pcp_driver_chiron.cpp  position_control_manager.cpp  serial_analyzer_main.cpp  (+4 more)
hft/deploy/: bridges.json  hft-manifest-edit.js  hft.logrotate  hft.service  hftd.conf.default  hftd.logrotate  hftd.service
hft/include/: auto_deallocator.hpp  basic_artifical_inteligence.hpp  basic_tcp_server.hpp  binomial_approximation.hpp  csv_loader.hpp  custom_except.hpp  daemon_process.hpp  decision_trigger.hpp  expert_advisor.hpp  files_change_tracker.hpp  fx_account.hpp  granularity_counter.hpp  hci.hpp  hft_expert_engine_interface.hpp  hft_req_proto.hpp  hft_session.hpp  hft_utils.hpp  hftr.hpp  instrument_handler.hpp  marketplace_gateway_process.hpp  mdc.hpp  neural_network.hpp  neuron.hpp  overnight_swaps.hpp  position_control.hpp  position_control_driver.hpp  position_control_manager.hpp  range.hpp  session_transport.hpp  text_file_reader.hpp  tracer.hpp  trade_journal.hpp  trade_time_frame.hpp  train_stat.hpp
rpm-gen/: rpm-gen.sh
rpm-gen/exchange/: rpm-generator.sh
rpm-gen/exchange/SPECS/: hft-system.spec
rpm-gen/hft-rpmbuild-dockerimage-src/: Dockerfile
